--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ src/gopkg.in
 src/ngrok/client/assets/
 src/ngrok/server/assets/
 .idea/
+
+# Generated asset files
+client/assets/assets_*.go
+server/assets/assets_*.go
